sample element added, must be placed in theme element folder, or in root element folder

--- a/config/plugin.yml
+++ b/config/plugin.yml
@@ -1,5 +1,5 @@
 name: TVocabulary
-description: Vocabularies with nested terms threaded by current term
+description: Vocabularies like threaded navigation tree
 
 author: Juraj Jancuska
 authorEmail: jjancuska@gmail.com
